[gd_scene load_steps=3 format=3 uid="uid://cxiif1wu1v4hb"]

[ext_resource type="PackedScene" uid="uid://cieq6mil2t854" path="res://Scenes/BaseBoss.tscn" id="1_eo1bt"]
[ext_resource type="Script" path="res://Scripts/boss_three.gd" id="2_tpvph"]

[node name="BaseBoss" instance=ExtResource("1_eo1bt")]
script = ExtResource("2_tpvph")
phase2_threshold = 0.66
phase3_threshold = 0.33
p1_tele_interval = 2.0
p2_clone_count = 2
p2_zig_amplitude = 60.0
p2_zig_rate = 4.0
p2_tele_interval = 1.5
p3_rapid_tele_interval = 0.8
p3_real_burst_chance = 0.6
p3_clone_count = 4

[node name="ColorRect" parent="." index="0"]
offset_left = 598.0
offset_top = 290.0
offset_right = 630.0
offset_bottom = 322.0
color = Color(1, 1, 0, 1)

[node name="TeleportPoints" type="Node2D" parent="." index="2"]

[node name="TopLeft" type="Marker2D" parent="TeleportPoints" index="0"]

[node name="TopRight" type="Marker2D" parent="TeleportPoints" index="1"]

[node name="MidLeft" type="Marker2D" parent="TeleportPoints" index="2"]

[node name="MidRight" type="Marker2D" parent="TeleportPoints" index="3"]

[node name="BottomLeft" type="Marker2D" parent="TeleportPoints" index="4"]

[node name="BottomRight" type="Marker2D" parent="TeleportPoints" index="5"]

[node name="CloneContainer" type="Node2D" parent="." index="3"]
